Fixed Z-Index Issue

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/core.forms.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/core.forms.less
@@ -56,7 +56,7 @@ input[type="text"], input[type="password"], select, textarea {
 		text-align: right;
 		top: 0;
 		width: auto;
-		z-index: 10;
+		z-index: 1;
 
 		button {
 			background-color: transparent;
